# bebop_autonomy

./: .gitignore  .travis.yml  LICENSE  README.md  index.html  params.json
bebop_autonomy/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
bebop_autonomy/cfg/autogenerated/: bebop_ardrone3.cfg
bebop_autonomy/config/: defaults.yaml
bebop_autonomy/include/bebop_autonomy/: bebop.h  bebop_driver_nodelet.h  bebop_video_decoder.h
bebop_autonomy/include/bebop_autonomy/autogenerated/: ardrone3_setting_callback_includes.h  ardrone3_setting_callbacks.h  ardrone3_state_callback_includes.h  ardrone3_state_callbacks.h  bebop_ardrone3_callback_includes.h  bebop_ardrone3_callbacks.h  bebop_commands.h  bebop_common_callback_includes.h  bebop_common_callbacks.h  callbacks_common.h  common_state_callback_includes.h  common_state_callbacks.h
bebop_autonomy/launch/: bebop.launch  bebop_node.launch  bebop_nodelet.launch
bebop_autonomy/scripts/meta/: bebop_callbacks.h.mustache  generate.py  generate_navdata.py  install.sh  last_build_info  msg.mustache  url.mustache
bebop_autonomy/scripts/meta/templates/: bebop_callback_includes.h.mustache  bebop_callbacks.h.mustache  bebop_commands.h.mustache  callback_includes.h.mustache  callbacks_common.h.mustache  cfg.mustache  last_build_info.mustache  msg.mustache  setting_callback_includes.h.mustache  setting_callbacks.h.mustache  settings_param.rst.mustache  state_callback_includes.h.mustache  state_callbacks.h.mustache  states_param_topic.rst.mustache  url.mustache
bebop_autonomy/src/: bebop.cpp  bebop_driver_node.cpp  bebop_driver_nodelet.cpp  bebop_video_decoder.cpp
bebop_autonomy/test/: README.md  bebop_itl_test.cpp  bebop_itl_test.test
bebop_autonomy_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bebop_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
bebop_description/launch/: description.launch
bebop_description/meshes/: bebop_model.stl
bebop_description/urdf/: bebop_base.urdf.xacro
bebop_driver/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
bebop_driver/cfg/autogenerated/: BebopArdrone3.cfg  bebop_ardrone3.cfg
bebop_driver/config/: defaults.yaml
bebop_driver/data/: bebop1_camera_calib.yaml  bebop2_camera_calib.yaml
bebop_driver/include/bebop_driver/: bebop.h  bebop_driver_nodelet.h  bebop_video_decoder.h  metadata_struct.h
bebop_driver/include/bebop_driver/autogenerated/: ardrone3_setting_callback_includes.h  ardrone3_setting_callbacks.h  ardrone3_state_callback_includes.h  ardrone3_state_callbacks.h  callbacks_common.h  common_state_callback_includes.h  common_state_callbacks.h
bebop_driver/launch/: bebop.launch  bebop1.launch  bebop101.launch  bebop103.launch  bebop14all_stick.launch  bebop1allspace.launch  bebop1allspaceTarget.launch  bebop3all_stick.launch  bebop421.launch  bebop4all.launch  bebop4all_stick.launch  bebop5all_stick.launch  bebop5allspace.launch  bebop_all.launch  bebop_node.launch  bebop_nodelet.launch  multirobots_nodelets.launch  multirobots_nodes.launch
bebop_driver/scripts/: bebop_env_loader
bebop_driver/scripts/meta/: README.md  fix_references.sh  generate.py  install.sh  last_build_info
bebop_driver/scripts/meta/templates/: callbacks_common.h.mustache  cfg.mustache  dictionary_key.mustache  msg.mustache  setting_callback_includes.h.mustache  setting_callbacks.h.mustache  settings_param.rst.mustache  state_callbacks.h.mustache  states_param_topic.rst.mustache  url.mustache
bebop_driver/src/: bebop.cpp  bebop_driver_node.cpp  bebop_driver_nodelet.cpp  bebop_video_decoder.cpp
bebop_driver/test/: README.md  bebop_itl_test.cpp  bebop_itl_test.test
bebop_localization/: CMakeLists.txt  package.xml
bebop_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bebop_msgs/msg/autogenerated/: Ardrone3AccessoryStateBattery.msg  Ardrone3AccessoryStateConnectedAccessories.msg  Ardrone3AntiflickeringStateelectricFrequencyChanged.msg  Ardrone3AntiflickeringStatemodeChanged.msg  Ardrone3CameraStateOrientation.msg  Ardrone3CameraStateOrientationV2.msg  Ardrone3CameraStateVelocityRange.msg  Ardrone3CameraStatedefaultCameraOrientation.msg  Ardrone3CameraStatedefaultCameraOrientationV2.msg  Ardrone3GPSStateHomeTypeAvailabilityChanged.msg  Ardrone3GPSStateHomeTypeChosenChanged.msg  Ardrone3GPSStateNumberOfSatelliteChanged.msg  Ardrone3MediaRecordStatePictureStateChanged.msg  Ardrone3MediaRecordStatePictureStateChangedV2.msg  Ardrone3MediaRecordStateVideoResolutionState.msg  Ardrone3MediaRecordStateVideoStateChanged.msg  Ardrone3MediaRecordStateVideoStateChangedV2.msg  Ardrone3MediaStreamingStateVideoEnableChanged.msg  Ardrone3MediaStreamingStateVideoStreamModeChanged.msg  Ardrone3NetworkStateAllWifiAuthChannelChanged.msg  Ardrone3NetworkStateAllWifiScanChanged.msg  Ardrone3NetworkStateWifiAuthChannelListChanged.msg  Ardrone3NetworkStateWifiScanListChanged.msg  Ardrone3PROStateFeatures.msg  Ardrone3PilotingStateAirSpeedChanged.msg  Ardrone3PilotingStateAlertStateChanged.msg  Ardrone3PilotingStateAltitudeChanged.msg  Ardrone3PilotingStateAttitudeChanged.msg  Ardrone3PilotingStateAutoTakeOffModeChanged.msg  Ardrone3PilotingStateFlatTrimChanged.msg  Ardrone3PilotingStateFlyingStateChanged.msg  Ardrone3PilotingStateGpsLocationChanged.msg  Ardrone3PilotingStateLandingStateChanged.msg  Ardrone3PilotingStateMotionState.msg  Ardrone3PilotingStateNavigateHomeStateChanged.msg  Ardrone3PilotingStatePilotedPOI.msg  Ardrone3PilotingStatePositionChanged.msg  Ardrone3PilotingStateReturnHomeBatteryCapacity.msg  Ardrone3PilotingStateSpeedChanged.msg  Ardrone3PilotingStatemoveToChanged.msg  (+46 more)
bebop_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
bebop_tools/config/: log710.yaml  xbox360.yaml  xbox360_disco.yaml
bebop_tools/launch/: bebop_nodelet_iv.launch  joy_teleop.launch  joy_teleop_autoflight.launch
bebop_tools/nodes/: autoflight_joy.py
bebop_tools/scripts/: autoflight_joy.py
docs/: FAQ.rst  Makefile  README.md  changelog.rst  conf.py  configuration.rst  contribute.rst  coordinates.rst  dev.rst  (+7 more)
(+70 files in other folders)
