<?xml version="1.0"?>
<package>
  <name>bebop_autonomy</name>
  <version>0.1.0</version>
  <description>ROS driver for Parrot Bebop Drone, based on ARDroneSDK3/libARController</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/bebop_autonomy</url>
  <url type="repository">http://github.com/AutonomyLab/bebop_autonomy</url>

  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ARDroneSDK3 deps -->
  <!-- We need java since the SDK requires jar binary -->
  <build_depend>git</build_depend>
  <build_depend>wget</build_depend> <!-- xxx -->
  <build_depend>java</build_depend>
  <build_depend>automake</build_depend>
  <build_depend>autoconf</build_depend>
  <build_depend>libtool</build_depend>
  <build_depend>yasm</build_depend>
  <build_depend>nasm</build_depend> <!-- xxx -->
  <build_depend>zlib</build_depend>

  <!-- ROS dependencies -->
  <build_depend>bebop_autonomy_msgs</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ffmpeg</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>bebop_autonomy_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ffmpeg</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
