<?xml version="1.0"?>
<package>
  <name>bebop_autonomy</name>
  <version>0.7.0</version>
  <description>bebop_autonomy is a ROS driver for Parrot Bebop drone, based on Parrot’s official ARDroneSDK3</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <maintainer email="smohaime@sfu.ca">Sepehr MohaimenianPour</maintainer>
  <maintainer email="thomas.bamford@mail.utoronto.ca">Thomas Bamford</maintainer>
  <maintainer email="naegelit@student.ethz.ch">Tobias Naegeli</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/bebop_autonomy</url>
  <url type="repository">http://github.com/AutonomyLab/bebop_autonomy</url>

  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>bebop_driver</run_depend>
  <run_depend>bebop_msgs</run_depend>
  <run_depend>bebop_tools</run_depend>
  <run_depend>bebop_description</run_depend>

  <export>
    <metapackage/>
  </export>
</package>

