<?xml version="1.0"?>
<package>
  <name>bebop_description</name>
  <version>0.7.0</version>
  <description>URDF robot description for Parrot Bebop Drones</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <maintainer email="smohaime@sfu.ca">Sepehr MohaimenianPour</maintainer>
  <maintainer email="thomas.bamford@mail.utoronto.ca">Thomas Bamford</maintainer>
  <maintainer email="naegelit@student.ethz.ch">Tobias Naegeli</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/bebop_description</url>
  <url type="repository">http://github.com/AutonomyLab/bebop_autonomy</url>
  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
