<?xml version="1.0"?>
<package>
  <name>bebop_driver</name>
  <version>0.7.1</version>
  <description>ROS driver for Parrot Bebop drone, based on Parrot’s official ARDroneSDK3</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <maintainer email="smohaime@sfu.ca">Sepehr MohaimenianPour</maintainer>
  <maintainer email="thomas.bamford@mail.utoronto.ca">Thomas Bamford</maintainer>
  <maintainer email="naegelit@student.ethz.ch">Tobias Naegeli</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/bebop_driver</url>
  <url type="repository">http://github.com/AutonomyLab/bebop_autonomy</url>

  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_gte="3.12.6">parrot_arsdk</build_depend>
  <build_depend>bebop_msgs</build_depend>
  <build_depend>bebop_description</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>ffmpeg</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend version_eq="3.12.6">parrot_arsdk</run_depend>
  <run_depend>bebop_msgs</run_depend>
  <run_depend>bebop_description</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>ffmpeg</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>ffmpeg</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <test_depend>angles</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
