<?xml version="1.0"?>
<package>
  <name>bebop_msgs</name>
  <version>0.7.0</version>
  <description>Common message definitions for bebop_autonomy</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <maintainer email="smohaime@sfu.ca">Sepehr MohaimenianPour</maintainer>
  <maintainer email="thomas.bamford@mail.utoronto.ca">Thomas Bamford</maintainer>
  <maintainer email="naegelit@student.ethz.ch">Tobias Naegeli</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/bebop_msgs</url>
  <url type="repository">http://github.com/AutonomyLab/bebop_autonomy</url>
  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
