<?xml version="1.0"?>
<package>
  <name>bebop_tools</name>
  <version>0.7.0</version>
  <description>Miscellaneous tools for bebop_autonomy metapackage</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <maintainer email="smohaime@sfu.ca">Sepehr MohaimenianPour</maintainer>
  <maintainer email="thomas.bamford@mail.utoronto.ca">Thomas Bamford</maintainer>
  <maintainer email="naegelit@student.ethz.ch">Tobias Naegeli</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/bebop_tools</url>
  <url type="repository">http://github.com/AutonomyLab/bebop_autonomy</url>
  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bebop_msgs</build_depend>
  <run_depend>bebop_driver</run_depend>
  <run_depend>bebop_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>joy_teleop</run_depend>
  <run_depend>image_view</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
